# Aurora

./: .gitignore  Build.lua  CMakeLists.txt  Dependencies.cmake  Dependencies.lua  README.md  RemoveBOM.lua  THIRD_PARTY_NOTICES.md  premake5.lua
App/: App.aps  App.rc  Build-App.lua  CMakeLists.txt  imgui.ini  premake5.lua
App/Shaders/: compile.lua  normal.frag  normal.geom  normal.vert  phong.frag  phong.vert  run.bat  shaderTest.frag  shaderTest.vert  vectors.frag  vectors.geom  vectors.vert
App/Source/: App.cpp  SandboxLayer.cpp  SandboxLayer.h
App/res/: app_icon.rc
App/shaders/: LightingUtils.hlsl  color.hlsl  postprocess.hlsl
Aurora/: CMakeLists.txt  premake5.lua
Aurora/Source/: Aurora.h  aupch.h
Aurora/Source/Aurora/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Ref.cpp  Ref.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Aurora/Source/Aurora/Event/: KeyEvent.h  MouseEvent.h
Aurora/Source/Aurora/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Aurora/Source/Aurora/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Aurora/Source/Aurora/Math/: Config.h  Math.h  MathDefines.h
Aurora/Source/Aurora/Renderer/: ArenaVector.h  BaseColorPass.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Font.cpp  Font.h  FrameAllocator.cpp  FrameAllocator.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IFramebuffer.cpp  IFramebuffer.h  IGraphicsContext.cpp  IGraphicsContext.h  IGraphicsInstance.cpp  IGraphicsInstance.h  IRenderCommandList.h  IRenderPass.h  IRenderPipeline.cpp  IRenderPipeline.h  IUniformBuffer.cpp  IUniformBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Pipeline.cpp  Pipeline.h  PostProcessPass.h  RenderCommand.cpp  RenderCommand.h  RenderGraph.cpp  (+26 more)
Aurora/Source/Aurora/Scene/: AssetRegistry.cpp  AssetRegistry.h  Components.h  Entity.cpp  Entity.h  MaterialAsset.cpp  MaterialAsset.h  MaterialManager.cpp  MaterialManager.h  MeshAsset.cpp  MeshAsset.h  MeshInstance.cpp  MeshInstance.h  MeshNode.cpp  MeshNode.h  ModelLoader.cpp  ModelLoader.h  Prefab.h  Scene.cpp  Scene.h  ScriptableEntity.h  SubMesh.cpp  SubMesh.h  TinygltfBuild.cpp
Aurora/Source/Aurora/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Aurora/Source/Aurora/Utils/: PlatformUtils.h  ReadFile.h
Aurora/Source/Core/: Application.cpp  Application.h  Core.cpp  Core.h  Layer.cpp  Layer.h  LayerStack.h  Log.h  Timer.h  UUID.cpp  Window.h
Aurora/Source/Platform/DirectX/Math/: Mat4DX.h  Vec2DX.h  Vec3DX.h  Vec4DX.h
Aurora/Source/Platform/DirectX/Renderer/: DirectX12Buffer.cpp  DirectX12Buffer.h  DirectX12CommandList.cpp  DirectX12CommandList.h  DirectX12ConstantBuffer.cpp  DirectX12ConstantBuffer.h  DirectX12Context.cpp  DirectX12Context.h  DirectX12Framebuffer.cpp  DirectX12Framebuffer.h  DirectX12GraphAllocator.cpp  DirectX12GraphAllocator.h  DirectX12HeapManager.cpp  DirectX12HeapManager.h  DirectX12PipelineState.cpp  DirectX12PipelineState.h  DirectX12RenderCommand.cpp  DirectX12RenderCommand.h  DirectX12RendererAPI.cpp  DirectX12RendererAPI.h  DirectX12SceneRenderer.cpp  DirectX12SceneRenderer.h  DirectX12Shader.cpp  DirectX12Shader.h  DirectX12SwapChain.cpp  DirectX12SwapChain.h  DirectX12Texture.cpp  DirectX12Texture.h  DirectX12TextureManager.cpp  DirectX12TextureManager.h  FrameResource.cpp  FrameResource.h  GlobalMeshBuffer.cpp  GlobalMeshBuffer.h  UploadBuffer.h
Aurora/Source/Platform/DirectX/Utils/: GeometryGenerator.cpp  GeometryGenerator.h  MSUtils.cpp  MSUtils.h  MathHelper.cpp  MathHelper.h  d3dUtil.cpp  d3dUtil.h
Aurora/Source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Aurora/Source/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanValidationLayer.cpp  VulkanValidationLayer.h  VulkanVertexArray.h
Aurora/Source/Platform/Vulkan/Renderer/: VertexLayoutDescriptor.cpp  VertexLayoutDescriptor.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsInstance.cpp  VulkanGraphicsInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderCommand.cpp  VulkanRenderCommand.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanValidationLayer.cpp  VulkanValidationLayer.h
Aurora/Source/Platform/Vulkan/Utils/: VulkanHelper.cpp  VulkanHelper.h
Aurora/Source/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Aurora/Source/Platform/glm/: Mat4Glm.h  Vec2Glm.h  Vec3Glm.h  Vec4Glm.h
Aurora/Source/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.h  RendererAPI.cpp  RendererAPI.h  VertexArray.cpp  VertexArray.h
Core/: Build-Core.lua
Core/Source/: Aurora.h  aupch.h
Core/Source/Core/: Application.cpp  Application.h  Base.h  Core.cpp  EntryPoint.cpp  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  PlatformDetector.h  Window.cpp  Window.h
Core/Source/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Core/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Core/Source/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Scripts/: Setup-Linux.sh  Setup-Windows.bat
